--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Koushik's Resume in a new tab"
-          href="https://drive.google.com/file/d/1l5Nlw8v8IFU6_ocV8pzYS6BJK-tExz8x/view" target="_blank"
+          href="https://drive.google.com/file/d/1TSdCy-OXyuaaxJhLmzrfFSKrli8VzncG/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
