--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
                   
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://sai3256.github.io/GTA-TASK/GTATASK.html" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="https://sportshop-updated.vercel.app/" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Sai3256/GTA-TASK"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Sai3256/Sportshop_updated"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
